# Biometric-identificator

./: README.md  comparator.py  detector.py  embedder.py  embedding_analyzer.py  embeddings.npy  main.py  migrator.py  prospects_embeddings.npy  pyproject.toml  readme.md  targets_embeddings.npy
